Bug 250977 - [SVG] Handle animation freeze when 'repeatDur' is not a multiple of 'dur'
Summary: [SVG] Handle animation freeze when 'repeatDur' is not a multiple of 'dur'
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ahmad Saleem
URL:
Keywords: InRadar
: 201740 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-22 06:33 PST by Ahmad Saleem
Modified: 2023-01-23 09:10 PST (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ahmad Saleem 2023-01-22 06:33:20 PST
Hi Team,

While going through Blink's commit, I came across another potential fix:

Blink Commit - https://src.chromium.org/viewvc/blink?view=revision&revision=154777

WebKit Source - https://searchfox.org/wubkat/source/Source/WebCore/svg/animation/SVGSMILElement.cpp#1028

Just wanted to raise so we can fix it.

Thanks!
Comment 1 Ahmad Saleem 2023-01-22 06:47:31 PST
PR - https://github.com/WebKit/WebKit/pull/8952
Comment 2 EWS 2023-01-23 08:52:00 PST
Committed 259212@main (72c7fe65cf68): <https://commits.webkit.org/259212@main>

Reviewed commits have been landed. Closing PR #8952 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-01-23 08:53:18 PST
<rdar://problem/104558011>
Comment 4 Ahmad Saleem 2023-01-23 09:10:01 PST
*** Bug 201740 has been marked as a duplicate of this bug. ***