[SVG] Handle animation freeze when 'repeatDur' is not a multiple of 'dur'

[SVG] Handle animation freeze when 'repeatDur' is not a multiple of 'dur'
https://bugs.webkit.org/show_bug.cgi?id=250977

Reviewed by Simon Fraser.

This patch is to align WebKit with Blink / Chromium and Gecko / Firefox.

Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=154777

This patch reinstate the logic which was present originally in WebKit but
later remove, it is meant to handle the scenario 'repeatingDuration' is not
a multiple of 'simpleDuration'.

* Source/WebCore/svg/animation/SVGSMILElement.cpp:
(SVGSMILElement::calculateAnimationPercentAndRepeat): Update to handle multiple of 'simpleDuration'
* LayoutTests/imported/w3c/web-platform-tests/svg/animations/animate-fill-freeze-with-repeatDur-expected.txt: Rebaselined

Canonical link: https://commits.webkit.org/259212@main